--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@iopanda/strapi-crack-ee",
+  "name": "sivium-enterprice-check",
   "version": "1.0.11",
   "description": "",
   "main": "index.js",
